# command-line-applications-in-rust

./: README.md
grrs/: Cargo.toml
grrs/src/: lib.rs  main.rs
grrs/tests/: cli.rs
