[package]
name = "grrs"
version = "0.1.0"
authors = ["DenTaku <dentaku1412@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/den-taku/coomand-line-applicatoins-in-rust"
repository = "https://github.com/den-taku/coomand-line-applicatoins-in-rust"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
anyhow = "1.0.40"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1"
tempfile = "3"
